--- a/essay/webpage.html
+++ b/essay/webpage.html
@@ -13,106 +13,30 @@
 </head>
 <body><div class="inner">
 <h1>動的Webページから静的Webページへの移行</h1>
-<p>Last Update <time>2018-12-15</time></p>
+<p>Last Update <time>2019-02-11</time></p>
 <hr>
 
 <h2>今までの状況</h2>
 
-<p>
-　今までウェブページはPico<a id="rpico" href="#pico">[1]</a>
-というフラットファイルCMSを使って公開していた。
-2年くらい使っていたらしい。
-これはMariaDBやPostgreSQLといったリレーショナルデータベースを使わずに、
-PHPがMarkdownをHTMLにレンダリングしてくれるというシステムだ。
-インストールはZIPファイルをドキュメントルートに展開するだけだし、
-Markdownは覚えるもの書くのも簡単だった。
-PHPの要求バージョンも5.3.6以上と低くレンタルサーバでも難なく動き、
-シンプルで使いやすい。
-ちなみにPicoは2018年07月29日にVersion 2.0.1がリリースされた。
-僕の使っていたバージョンはまだVersion 1系だった。
-開発は今も盛んにおこなわれているようだ。
-</p>
+<p>　今までウェブページはPico<a id="rpico" href="#pico">[1]</a>というフラットファイルCMSを使って公開していた。2年くらい使っていたらしい。これはMariaDBやPostgreSQLといったリレーショナルデータベースを使わずに、PHPがMarkdownをHTMLにレンダリングしてくれるというシステムだ。インストールはZIPファイルをドキュメントルートに展開するだけだし、Markdownは覚えるもの書くのも簡単だった。PHPの要求バージョンも5.3.6以上と低くレンタルサーバでも難なく動き、シンプルで使いやすい。ちなみにPicoは2018年07月29日にVersion 2.0.1がリリースされた。僕の使っていたバージョンはまだVersion 1系だった。開発は今も盛んにおこなわれているようだ。</p>
 
-<p>
-　PicoのようなフラットファイルCMSは数多く存在し、
-どれもシンプルさと速さを謳い文句にしている。
-これは正しく、設定方法こそそれぞれのシステムで異なるものの、
-コンテンツはMarkdownという共通のフォーマットで書くので可搬性に優れている。
-たとえばPicoからGrav<a id="rgrav" href="#grav">[2]</a>
-に移行するとき、コンテンツの入れ替えそのものは一瞬で終わるはずだ。
-またPandoc<a id="rpandoc" href="#pandoc">[3]</a>
-のようなコンバータを使えば、
-MarkdownからHTMLやODTといった様々なフォーマットへ変換できる。
-</p>
+<p>　PicoのようなフラットファイルCMSは数多く存在し、どれもシンプルさと速さを謳い文句にしている。これは正しく、設定方法こそそれぞれのシステムで異なるものの、コンテンツはMarkdownという共通のフォーマットで書くので可搬性に優れている。たとえばPicoからGrav<a id="rgrav" href="#grav">[2]</a>に移行するとき、コンテンツの入れ替えそのものは一瞬で終わるはずだ。またPandoc<a id="rpandoc" href="#pandoc">[3]</a>のようなコンバータを使えば、MarkdownからHTMLやODTといった様々なフォーマットへ変換できる。</p>
 
-<p>
-　シンプルかつキレイなページを生成してくれるのでPicoは重宝していたが、
-ついにHTML5ベタ書きによる静的なウェブページ公開に踏み切った。
-Pico固有の問題またはフラットファイルCMSの問題というわけではない。
-単に個人的なウェブページの使い方を考慮すると、
-CMSの動的Webページよりも静的Webページのほうが
-個人的に性に合った点が多いと気づいたからだ。
-</p>
+<p>　シンプルかつキレイなページを生成してくれるのでPicoは重宝していたが、ついにHTML5ベタ書きによる静的なウェブページ公開に踏み切った。Pico固有の問題またはフラットファイルCMSの問題というわけではない。単に個人的なウェブページの使い方を考慮すると、CMSの動的Webページよりも静的Webページのほうが個人的に性に合った点が多いと気づいたからだ。</p>
 
 <h2>なぜHTMLを直書きしようと思ったのか</h2>
 
-<p>
-　基本的に、書き物は自分があとから読み返すために書く。
-Markdownの書きやすさはすさまじいが、
-それをありがたく思えるようなスタイルではなくなった。
-</p>
+<p>　基本的に、書き物は自分があとから読み返すために書く。Markdownの書きやすさはすさまじいが、それをありがたく思えるようなスタイルではなくなった。</p>
 
-<p>
-　自分が読み返すものは時間をかけて書いた比較的長いページやPDFばかりで、
-メモのような短いページは、
-書いてある内容を覚えてしまったために参照しなかったり
-書いたことすら忘れてGoogle検索してしまう場合がほとんどだった。
-Vimやtmuxの操作方法なんかはその代表例だ。
-Picoは設定次第でブログらしい振る舞いにすることもできるが、
-そもそも日記をあとから読み返す性格ではないし、
-キーワード検索機能は自力で書かないといけないから手間がかかると気づいた。
-2017年の5月からMarkdownで日記を書き始めたが、読み返したことはほとんどない。
-読み返さないものを書き連ねていくよりはちゃんとした文書を残すほうがいい。
-</p>
+<p>　自分が読み返すものは時間をかけて書いた比較的長いページやPDFばかりで、メモのような短いページは、書いてある内容を覚えてしまったために参照しなかったり書いたことすら忘れてGoogle検索してしまう場合がほとんどだった。Vimやtmuxの操作方法なんかはその代表例だ。Picoは設定次第でブログらしい振る舞いにすることもできるが、そもそも日記をあとから読み返す性格ではないし、キーワード検索機能は自力で書かないといけないから手間がかかると気づいた。2017年の5月からMarkdownで日記を書き始めたが、読み返したことはほとんどない。読み返さないものを書き連ねていくよりはちゃんとした文書を残すほうがいい。</p>
 
-<p>
-　真面目に文書を書くと時間がかかる。
-Markdownで書こうがHTMLのタグを打とうが大した差ではなくなる。
-これはMarkdownを書かなくなった理由といったほうがいいかもしれない。
-エディタの設定が悪いのか、
-長い文書をMarkdownで書くとカラーリングが狂ってしまう問題も抱えていた。
-</p>
+<p>　真面目に文書を書くと時間がかかる。Markdownで書こうがHTMLのタグを打とうが大した差ではなくなる。これはMarkdownを書かなくなった理由といったほうがいいかもしれない。エディタの設定が悪いのか、長い文書をMarkdownで書くとカラーリングが狂ってしまう問題も抱えていた。</p>
 
-<p>
-　Markdownのパーサが原稿内の改行文字を半角スペースとして解釈する仕様も
-少なからず不満だった。
-なるべく1行を80文字で収めたい身としては、
-変な半角スペースが挿入されるのを防ぐために
-1行を長く書かなければいけないことに対し、すっきりしない気持ちを抱いていた
-（FLOSSなのだから自分で直せばいいだけの話ではある）。
-</p>
+<p>　どんなソフトウェアも設定次第だ。しかし2年使ったのにも関わらず僕はあまりPicoをカスタマイズできていなかった。単にTwigやPHPを書いたり勉強したりする気力がなかっただけなのだが、標準設定のまま使うならPicoであってもオーバースペックだろう。サーバ機の計算資源も無駄なだけだ（誤差であろうとも……）。</p>
 
-<p>
-　どんなソフトウェアも設定次第だ。
-しかし2年使ったのにも関わらず僕はあまりPicoをカスタマイズできていなかった。
-単にTwigやPHPを書いたり勉強したりする気力がなかっただけなのだが、
-標準設定のまま使うならPicoであってもオーバースペックだろう。
-サーバ機の計算資源も無駄なだけだ（誤差であろうとも……）。
-</p>
+<p>　デザインの好みの問題からヘッダーに色をつけたり、ソースコード表記をするときに背景をグレーにしたり……といったような見栄えに関する効果に飽きたというのもある。ソースコードを読むときはシンタックスカラーが付いていないと読みづらくて仕方がないし文法のミスを見つけづらいが、文書は色彩の起伏が抑えられているものが好きだし読みやすい。</p>
 
-<p>
-　デザインの好みの問題からヘッダーに色をつけたり、
-ソースコード表記をするときに背景をグレーにしたり……
-といったような見栄えに関する効果に飽きたというのもある。
-ソースコードを読むときはシンタックスカラーが付いていないと
-読みづらくて仕方がないし文法のミスを見つけづらいが、
-文書は色彩の起伏が抑えられているものが好きだし読みやすい。
-</p>
-
-<p>
-　しかし素のHTMLでは<code>pre</code>タグと<code>code</code>タグの中に書いたものは普通のテキストと区別しづらい。
-そこで僕は下記のように黒線で囲うようにしている。文字サイズや左右の空白幅はCSSで調整する。
-</p>
+<p>　しかし素のHTMLでは<code>pre</code>タグと<code>code</code>タグの中に書いたものは普通のテキストと区別しづらい。そこで僕は下記のように黒線で囲うようにしている。文字サイズや左右の空白幅はCSSで調整する。</p>
 
 <pre><code>#include &lt;stdio.h&gt;
 int
@@ -122,36 +46,13 @@ main(void)
         return 0;
 }</code></pre>
 
-<p>
-　このページはHTML 5.2 W3C Recommendation<a id="#rw3c" href="#w3c">[4]</a>
-に従って書かれている。
-HTMLとCSSと以外で構成されていないので、
-リレーショナルデータベースとかPHPとか関係なしにHTTPデーモンさえ動いていれば
-確実にブラウザで表示できる。
-僕はこういった原始的な手法による優位性を重んじる傾向にあるらしい。
-HTMLやCSSの勉強にもなる。
-</p>
+<p>　このページはHTML 5.2 W3C Recommendation<a id="#rw3c" href="#w3c">[4]</a>に従って書かれている。HTMLとCSSと以外で構成されていないので、リレーショナルデータベースとかPHPとか関係なしにHTTPデーモンさえ動いていれば確実にブラウザで表示できる。僕はこういった原始的な手法による優位性を重んじる傾向にあるらしい。HTMLやCSSの勉強にもなる。</p>
 
-<p>
-　MarkdownもCommonMark<a id="#rcm" href="cm">[5]</a>
-という規格があるものの、GitHub Flavored Markdown（GFM）
-<a id="rgfm" href="gfm">[6]</a>
-に代表されるCommonMarkの拡張版も種類が多くややこしい。
-</p>
+<p>　MarkdownもCommonMark<a id="#rcm" href="cm">[5]</a>という規格があるものの、GitHub Flavored Markdown（GFM）<a id="rgfm" href="gfm">[6]</a>に代表されるCommonMarkの拡張版も種類が多くややこしい。</p>
 
 <h2>おわり</h2>
 
-<p>
-　無論、Markdownから原始的な方法に鞍替えした弊害もある。
-HTMLタグを調べる手間はやはり大きい。
-動的にページを作ってくれないので、当然リンクは手作業で張る必要がある。
-現に、Picoを使う前はHTMLを手書きしてウェブページを書いていたし、
-手作業が多すぎて嫌になったからPicoに移った経緯もある。
-しかしこれらの弊害を許容してでも、
-自身で制御し切れない動的なページ生成に頼るよりは
-思ったように確実に描画される静的なページを書きたい。
-そうしてまとまった文書を書いてなるべく長く残したい。
-</p>
+<p>　無論、Markdownから原始的な方法に鞍替えした弊害もある。HTMLタグを調べる手間はやはり大きい。動的にページを作ってくれないので、当然リンクは手作業で張る必要がある。現に、Picoを使う前はHTMLを手書きしてウェブページを書いていたし、手作業が多すぎて嫌になったからPicoに移った経緯もある。しかしこれらの弊害を許容してでも、自身で制御し切れない動的なページ生成に頼るよりは思ったように確実に描画される静的なページを書きたい。そうしてまとまった文書を書いてなるべく長く残したい。</p>
 
 <p id="pico"><a href="#rpico">1</a> <a href="http://picocms.org">picocms.org</a></p>
 <p id="grav"><a href="#rgrav">2</a> <a href="https://getgrav.org">getgrav.org</a></p>
