remove new lines

--- a/essay/work_life_barance.html
+++ b/essay/work_life_barance.html
@@ -14,116 +14,53 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 </head>
 <body><div class="inner">
 <h1>会社員とFLOSS趣味プログラマの両立について</h1>
-<p>Last Update <time>2018-12-01</time></p>
+<p>Last Update <time>2019-02-11</time></p>
 <hr>
 <h2>FLOSS開発を仕事にするのは難しくない</h2>
-<p>
-いまさら「FLOSSは商用製品として（あるいはその一部として）使えるのか？」
-なんて問いは時代遅れだ。FLOSSは星の数ほど存在するので玉石混交ではあるが、
-Linux、Apache、PostgreSQL、GCC、Pythonなど一級品のFLOSSは広く使われている。
-いまはもうFLOSSを使わないことのほうが難しい。
-FLOSSの開発・サポートを主軸に置いている企業も数多くあるし、
-もしFLOSS開発に関わりたいのであればそのような企業を選んで応募すべきだろう。
-お気に入りのFLOSSをフルタイムで開発できる保証はないが、
-少なくともFLOSSに関係した業務に携わることはできるはずだ。
-業務としてコミュニティにパッチを出したりディスカッションに参加できる可能性もある。
-</p>
+
+<p>いまさら「FLOSSは商用製品として（あるいはその一部として）使えるのか？」なんて問いは時代遅れだ。FLOSSは星の数ほど存在するので玉石混交ではあるが、Linux、Apache、PostgreSQL、GCC、Pythonなど一級品のFLOSSは広く使われている。いまはもうFLOSSを使わないことのほうが難しい。FLOSSの開発・サポートを主軸に置いている企業も数多くあるし、もしFLOSS開発に関わりたいのであればそのような企業を選んで応募すべきだろう。お気に入りのFLOSSをフルタイムで開発できる保証はないが、少なくともFLOSSに関係した業務に携わることはできるはずだ。業務としてコミュニティにパッチを出したりディスカッションに参加できる可能性もある。</p>
+
 <h2>趣味としてのFLOSS開発はどうする？</h2>
-<p>
-　ここで僕が問題にしたいのはそういうことではなく、
-業務では全く関わりがないFLOSSを趣味として開発し続けたい会社員は
-いつどこで開発をすればいいのか？というものだ。とうぜん余暇に開発するしかない。
-土曜日・日曜日は完全に自由だから開発のための時間はとれるだろう。しかし平日は？
-</p>
-<p>
-　平日に好きなFLOSS開発をやるのは難しい。
-その難しさは確保できる時間の少なさと仕事疲れ、一人暮らしであれば家事などからくるものだ。
-会社の制度として業務時間のX％以内であれば好きに開発してOKというものがあるとか、
-そういうレアケースは除いて考えてみたい。
-</p>
+
+<p>　ここで僕が問題にしたいのはそういうことではなく、業務では全く関わりがないFLOSSを趣味として開発し続けたい会社員はいつどこで開発をすればいいのか？というものだ。とうぜん余暇に開発するしかない。土曜日・日曜日は完全に自由だから開発のための時間はとれるだろう。しかし平日は？</p>
+
+<p>　平日に好きなFLOSS開発をやるのは難しい。その難しさは確保できる時間の少なさと仕事疲れ、一人暮らしであれば家事などからくるものだ。会社の制度として業務時間のX％以内であれば好きに開発してOKというものがあるとか、そういうレアケースは除いて考えてみたい。</p>
+
 <h3>空き時間を計算する</h3>
-<p>
-　単純な計算で空き時間を求めてみよう。
-僕の場合、勤務時間は1日8時間で休憩1時間を加えると合計9時間は会社に拘束される。
-オフィスは都心にあるけど、家は都心から離れているので通勤時間はおおよそ1時間くらいだ。
-往復するのでこれまでの合計は11時間になる。
-</p>
-<p>
-　11時間！僕は毎日11時間も仕事のために拘束されているのだ。
-最後にこれに睡眠時間を足そう。健康的な睡眠時間は個人差があるが、
-一説によると7~8時間がもっとも健康的な睡眠量らしい。
-僕は毎日20時までに寝て3時半に起き、始発電車に間に合うように支度する。
-6時に出勤し15時に退勤というスケジュールで働いている。
-とりあえず睡眠時間は7.5時間としよう。
-すると平日僕が稼ぎながら生きるために費やしている時間は18.5時間だとわかった。
-</p>
-<p>
-　空き時間は残りの5.5時間だが、すべてをFLOSS開発に費やせられるわけではない。
-ご飯を作って食べる時間もあるし、朝の支度や食器洗い、
-風呂／シャワーの時間まで考慮しないといけない。
-実家暮らしあるいは結婚しているならばある程度はやらなくていいかもしれないが、
-それでも差はわずかなものだろう（いまは夫婦共働きの時代だし家事分担は当たり前だ）。
-ここではざっくりと、家事にはすべてを合計して2時間かかるとしよう。
-結果、平日で僕がFLOSS開発にあてられる時間は3.5時間だとわかった。
-この値は僕の生活をもとに算出したから、当然かなり個人差があるだろう。
-ちなみに僕は就寝1時間前にはすべての電子機器を使わないようにして睡眠薬を飲んでいるので、
-実際にFLOSS開発ができる時間は最大2.5時間ほどだ。
-</p>
+<p>　単純な計算で空き時間を求めてみよう。僕の場合、勤務時間は1日8時間で休憩1時間を加えると合計9時間は会社に拘束される。オフィスは都心にあるけど、家は都心から離れているので通勤時間はおおよそ1時間くらいだ。往復するのでこれまでの合計は11時間になる。</p>
+
+<p>　11時間！僕は毎日11時間も仕事のために拘束されているのだ。最後にこれに睡眠時間を足そう。健康的な睡眠時間は個人差があるが、一説によると7~8時間がもっとも健康的な睡眠量らしい。僕は毎日20時までに寝て3時半に起き、始発電車に間に合うように支度する。6時に出勤し15時に退勤というスケジュールで働いている。とりあえず睡眠時間は7.5時間としよう。すると平日僕が稼ぎながら生きるために費やしている時間は18.5時間だとわかった。</p>
+
+<p>　空き時間は残りの5.5時間だが、すべてをFLOSS開発に費やせられるわけではない。ご飯を作って食べる時間もあるし、朝の支度や食器洗い、風呂／シャワーの時間まで考慮しないといけない。ここではざっくりと、家事にはすべてを合計して2時間かかるとしよう。結果、平日で僕がFLOSS開発にあてられる時間は3.5時間だとわかった。この値は僕の生活をもとに算出したから、当然かなり個人差があるだろう。ちなみに僕は就寝1時間前にはすべての電子機器を使わないようにして睡眠薬を飲んでいるので、実際にFLOSS開発ができる時間は最大2.5時間ほどだ。</p>
+
 <h2>空き時間を見つける</h2>
-<p>
-　会社員が平日のFLOSS開発に使えるおおまかな時間を算出した。
-これで十分だと思う人もいれば、まだまだ足りないと思う人もいるだろう。
-先ほど算出した時間はあくまでも自宅に限った話だ。
-だから通勤や休憩時間を活用してFLOSS開発にあてる時間を増やすこともできなくはない。
-</p>
+
+<p>　会社員が平日のFLOSS開発に使えるおおまかな時間を算出した。これで十分だと思う人もいれば、まだまだ足りないと思う人もいるだろう。先ほど算出した時間はあくまでも自宅に限った話だ。だから通勤や休憩時間を活用してFLOSS開発にあてる時間を増やすこともできなくはない。</p>
+
 <h3>休憩時間を使う</h3>
-<p>
-　1時間の休憩時間のうち、15分から30分くらいは趣味の時間として活用できる。
-僕は休憩時間で弁当を食べて弁当箱を洗い歯を磨く。ゆっくり食べるからこれには45分かかる。
-これで残りは15分だ。もちろん、弁当箱を洗わなければもっと時間を確保できる。
-弁当をコンビニで買うとか、（僕の会社にはないが）社食を選ぶとか。
-時間は短いが、READMEを書いたり関数を少し書いたりはできるだろう。
-</p>
+
+<p>　1時間の休憩時間のうち、15分から30分くらいは趣味の時間として活用できる。僕は休憩時間で弁当を食べて弁当箱を洗い歯を磨く。ゆっくり食べるからこれには45分かかる。これで残りは15分だ。もちろん、弁当箱を洗わなければもっと時間を確保できる。弁当をコンビニで買うとか、（僕の会社にはないが）社食を選ぶとか。時間は短いが、READMEを書いたり関数を少し書いたりはできるだろう。</p>
+
 <h3>通勤時間を使う</h3>
-<p>
-　通勤時間が1時間だとしても、1時間ずっと電車や地下鉄、バスに乗っているわけではない。
-自宅から駅まで、また乗り換えの時間もある。
-しかし合わせて30〜40分はノートパソコンでなにかしらの作業ができると思う。
-東京で9時〜18時のスケジュールで働く人ならこれは難しいかもしれない。
-電車が混みすぎて座れないからだ。路線によってはノートPCを開く余裕すらない。
-しかしスーパーフレックス制を採用している会社で働いているのでれば、
-6時に出社するような生活リズムを作ればほぼ間違いなく席に座って作業ができるだろう。
-</p>
+
+<p>　通勤時間が1時間だとしても、1時間ずっと電車や地下鉄、バスに乗っているわけではない。自宅から駅まで、また乗り換えの時間もある。しかし合わせて30〜40分はノートパソコンでなにかしらの作業ができると思う。東京で9時〜18時のスケジュールで働く人ならこれは難しいかもしれない。電車が混みすぎて座れないからだ。路線によってはノートPCを開く余裕すらない。しかしスーパーフレックス制を採用している会社で働いているのでれば、6時に出社するような生活リズムを作ればほぼ間違いなく席に座って作業ができるだろう。</p>
+
 <h2>業務を利用する</h2>
-<p>
-　社内規定に反することをやれというのではない。
-たとえば業務でPythonを使ってコーディングしているのであれば、
-趣味で書いているFLOSSもPythonを使えばいい……という程度の話だ。
-業務で使っているツールをなるべく趣味のFLOSSプロジェクトでも活用することで、
-業務中におおっぴらに趣味のため（でもある）勉強ができる。
-</p>
+
+<p>　社内規定に反することをやれというのではない。たとえば業務でPythonを使ってコーディングしているのであれば、趣味で書いているFLOSSもPythonを使えばいい……という程度の話だ。業務で使っているツールをなるべく趣味のFLOSSプロジェクトでも活用することで、業務中におおっぴらに趣味のため（でもある）勉強ができる。</p>
+
 <h2>拘束時間は残業なしでも多すぎる</h2>
-<p>
-　別にFLOSS開発に限った話ではなく、
-なにかしようにもそれに充てられる時間がとても短いのははっきりしている。
-</p>
-<p>
-　まず通勤を無くせばその分だけ余暇が増える。
-リモートワークできる職種であればそれを会社全体で推進していくべきだ。
-いやそもそも5日間連続で最低8時間働くというのも、僕としては正気の沙汰ではない。
-金曜日にはもうみんなヘロヘロなんだし、水曜日も休日にするか半日で切り上げてほしい。
-</p>
-<p>
-　しかし働き方に文句があるなら会社員やらないで独立しろというのが現状では正しかったりするのかもしれない。
-</p>
+
+<p>　別にFLOSS開発に限った話ではなく、なにかしようにもそれに充てられる時間がとても短いのははっきりしている。</p>
+
+<p>　まず通勤を無くせばその分だけ余暇が増える。リモートワークできる職種であればそれを会社全体で推進していくべきだ。いやそもそも5日間連続で最低8時間働くというのも、僕としては正気の沙汰ではない。金曜日にはもうみんなヘロヘロなんだし、水曜日も休日にするか半日で切り上げてほしい。</p>
+
+<p>　しかし働き方に文句があるなら会社員やらないで独立しろというのが現状では正しかったりするのかもしれない。</p>
+
 <h2>まとめ</h2>
-<p>
-　会社員は趣味に使える時間の余裕がない。
-仕事が終わってから、あるいは休日も空いている時間すべてをFLOSS開発に捧げるわけではないなら、
-趣味としてのFLOSS開発に充てられる時間はさらに少なくなる。これは当たり前のことだ。
-今の働き方について文句がないわけではないけれど、FLOSS趣味プログラマというか
-日曜プログラマというか、そういう人種はゆっくりコツコツと書いていく以外にないのかもしれない。
-</p>
+
+<p>　会社員は趣味に使える時間の余裕がない。仕事が終わってから、あるいは休日も空いている時間すべてをFLOSS開発に捧げるわけではないなら、趣味としてのFLOSS開発に充てられる時間はさらに少なくなる。これは当たり前のことだ。今の働き方について文句がないわけではないけれど、FLOSS趣味プログラマというか日曜プログラマというか、そういう人種はゆっくりコツコツと書いていく以外にないのかもしれない。</p>
+
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
