--- a/introduction/index.html
+++ b/introduction/index.html
@@ -36,7 +36,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
     <ol>
       <li>デスクトップ環境
         <ol>
-        <li>ウィンドウマネージャ&mdash;&mdash;i3</li>
+        <li><a href="./i3.html">ウィンドウマネージャ&mdash;&mdash;i3</a></li>
         <li>仮想端末&mdash;&mdash;rxvt-unicode</li>
         <li>端末多重化&mdash;&mdash;tmux</li>
         <li>インプットメソッド&mdash;&mdash;ibus-mozc</li>
