--- a/introduction/i3.html
+++ b/introduction/i3.html
@@ -167,9 +167,27 @@ bar {
 
 <h2>操作方法</h2>
 
-<p>上記の設定ファイルどおりであれば、<code>Win+Enter</code>で仮想端末を起動できる。<code>Win+d</code>を入力すると画面上部にテキストボックスが出てくるので、実行したいソフトウェアの名前を入力する（firefox, gimpなど）。画面のフォーカスを切り替えるにはマウスカーソルをフォーカス対象のウィンドウまで移動するか、<code>Win+h/j/k/l</code>で切り替える。</p>
+<p>よく使う機能とそのキー操作は以下の通り。"$mod"はホットキーを意味する。当然、設定ファイルの内容に操作が影響されるため上述の設定ファイルに沿ったものとなっている。</p>
 
-<p>「i3wm」と検索すれば詳しい操作方法はいくらでも見つかるのでそうしてほしい。</p>
+<table><thead>
+<tr><th>機能</th><th>操作</th></tr>
+</thead><tbody>
+<tr><td>仮想端末を起動する</td><td>$mod + Enter</td></tr>
+<tr><td>プログラムランチャを起動する</td><td>$mod + d</td></tr>
+<tr><td><code>i3(1)</code>を終了し、Xセッションを終了する</td><td>$mod + Shift + e</td></tr>
+<tr><td>設定ファイルを再読込する</td><td>$mod + shift + r</td></tr>
+<tr><td>ウィンドウのフォーカスを下に移動する</td><td>$mod + j</td></tr>
+<tr><td>ウィンドウのフォーカスを上に移動する</td><td>$mod + k</td></tr>
+<tr><td>ウィンドウのフォーカスを左に移動する</td><td>$mod + h</td></tr>
+<tr><td>ウィンドウのフォーカスを右に移動する</td><td>$mod + l</td></tr>
+<tr><td>フォーカスをワークスペースNに移動する</td><td>$mod + N</td></tr>
+<tr><td>フォーカスされているウィンドウをワークスペースNに移動する</td><td>$mod + Shift + N</td></tr>
+<tr><td>フォーカスされているウィンドウを閉じる（終了させる）</td><td>$mod + Shift + q</td></tr>
+<tr><td>フォーカスされているウィンドウを浮かせる／タイルに落とす</td><td>$mod + Shift + Space</td></tr>
+<tr><td>ウィンドウのサイズを変更するための状態に移る</td><td>$mod + r</td></tr>
+<tr><td>ウィンドウのサイズを変更するための状態から抜ける</td><td>$mod + Enter</td></tr>
+<tr><td>ウィンドウのサイズを変更する</td><td>$mod + h/j/k/l</td></tr>
+</tbody></table>
 
 <hr>
 <footer>
