--- a/introduction/i3.html
+++ b/introduction/i3.html
@@ -169,7 +169,7 @@ bar {
 
 <p>よく使う機能とそのキー操作は以下の通り。"$mod"はホットキーを意味する。当然、設定ファイルの内容に操作が影響されるため上述の設定ファイルに沿ったものとなっている。</p>
 
-<table><thead>
+<table border="1"><thead>
 <tr><th>機能</th><th>操作</th></tr>
 </thead><tbody>
 <tr><td>仮想端末を起動する</td><td>$mod + Enter</td></tr>
