--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 
 <h2 id="about">About</h2>
 
-<p>このページは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書である。</p>
+<p>このページは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書です。</p>
 
-<p>このページに関する批判・議論・指摘・改善案は榎本までメールで連絡してほしい。ただし、提供したコンテンツすべてがCreative Commons 0（CC0）でライセンスされることを承知の上で。本ドメインのHTMLファイルはCC0で提供するものとする（PDFはちょっと怪しいのでいまのところHTMLファイルに限定している。再頒布や引用程度ならまったく問題なさそうだけど……）。</p>
+<p>このページに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。本ドメインのHTMLファイルはCC0で提供するものとします（PDFはちょっと怪しいのでいまのところHTMLファイルに限定しています。引用程度ならまったく問題なさそうですが……）。</p>
 
-<p>内容は予告なく変更される。最終更新日が明記されているページもある。しかし最近、HTMLファイルを<a href="https://github.com/user340/www">https://github.com/user340/www</a>で管理し始めたので正確な差分や変更日時はここから確認できることもある。</p>
+<p>内容は予告なく変更されます。正確な変更差分や変更日時は<a href="https://github.com/user340/www">https://github.com/user340/www</a>リポジトリから確認できます。</p>
 
 <hr>
 <footer>
